<resources>
    <string name="app_name">SafeLens</string>
    <string name="lets_secure">Let’s Secure</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">WELCOME ON BOARD!</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your full name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_aadhar">Enter your Aadhar No.</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_phoneno">Enter your Phone Number</string>
    <string name="already_have_account">Already having an Account? </string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_button">LOGIN</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="verification">VERIFICATION</string>
    <string name="otp_message">We will send you a <b>One Time Password</b> on your phone number</string>
    <string name="get_otp">GET OTP</string>
    <string name="verify_otp">You will get an <b>OTP</b> via SMS</string>
    <string name="verify">VERIFY</string>
    <string name="enter_otp">Enter your OTP</string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="message_for_forget_your_password">Enter the email address associated with the account to reset your password</string>
    <string name="no_verification">Didn\'t receive the verification OTP ?</string>
    <string name="resend_again">Resend again</string>
    <string name="continue_message">CONTINUE</string>
    <string name="devices">DEVICES</string>
    <string name="add_camera">ADD A CAMERA</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="profile">PROFILE</string>
    <string name="sign_out">Sign Out</string>
    <string name="camera_specifications">Camera Specifications</string>
    <string name="enter_model">Enter Model name</string>
    <string name="enter_resolution">Enter Resolution</string>
    <string name="enter_dpi">Enter DPI</string>
    <string name="enter_serial_no">Enter Serial Number of VMS/NVR</string>
    <string name='camera_location'>Camera Location</string>
    <string name="address1">Flat, House no., Shop no., Building, Company, Apartment</string>
    <string name="address2">Area, Street, Sector, Village</string>
    <string name="district">District</string>
    <string name="pincode">Pin Code</string>
    <string name="state">State</string>
    <string name='country'>Country</string>
    <string name='use_my_current_location'>Use my current location</string>
    <string name='generate_id'>Generate ID</string>
    <string name="camera_id">Camera ID : </string>
    <string name='aadhar_line'>Registered Under (Aadhar):</string>
    <string name="address_line_1">Address Line 1 : </string>
    <string name="address_line_2">Address Line 2 : </string>
    <string name="district_line">District : </string>
    <string name="state_line">State : </string>
    <string name="country_line">Country : </string>
    <string name="dpi_line">DPI : </string>
    <string name="resolution_line">Resolution : </string>
    <string name="default_message">NO DEVICES CONNECTED :(</string>
    <string name="model_line">Model : </string>
    <string name="notification_text">Notification</string>
    <string name="serial_line">Serial No. : </string>
    <string name="typeof_camera">TYPE OF CAMERA</string>
    <string name="choose_message">Choose the type of camera</string>
    <string name="button_1_choose_camera">IP without DVR/NVR</string>
    <string name="button_2_choose_camera">IP/Analog with DVR/NVR</string>
    <string name='add_camera_message'>Stand near To Your Camera</string>
    <string name="initial_text">Stay vigilant with our surveillance app, where safety meets simplicity. Protect what matters most with cutting-edge monitoring at your fingertips</string>
</resources>