<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    >

    <ImageView
        android:id="@+id/imageBackButtonPage1"
        android:layout_width="19dp"
        android:layout_height="39dp"
        android:elevation="100dp"
        android:src="@drawable/img_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <View
        android:id="@+id/circleView1"
        android:layout_width="402dp"
        android:layout_height="402dp"
        android:layout_marginStart="-401dp"
        android:layout_marginTop="-201dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <View
        android:id="@+id/circleView2"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginStart="-401dp"
        android:layout_marginTop="-201dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textWelcomeOnBoard"
        android:layout_width="207dp"
        android:layout_height="58dp"
        android:elevation="100dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"/>

    <!-- Inside your ConstraintLayout -->
    <EditText
        android:id="@+id/RegisterName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/curved_background"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:textColorHint="#DCDCDC"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textWelcomeOnBoard"/>

    <EditText
        android:id="@+id/RegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/curved_background"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:textColorHint="#DCDCDC"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterName"/>

    <EditText
        android:id="@+id/RegisterAadhar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/curved_background"
        android:hint="@string/enter_your_aadhar"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:textColorHint="#DCDCDC"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterEmail"/>

    <EditText
        android:id="@+id/RegisterPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/curved_background"
        android:hint="@string/enter_phoneno"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:textColorHint="#DCDCDC"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterAadhar"/>


    <EditText
        android:id="@+id/RegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/curved_background"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:textColorHint="#DCDCDC"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterPhoneNumber"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterPassword" />

    <TextView
        android:id="@+id/textSignInPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_account"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_in"
        android:textColor="@color/sign_in"
        android:textSize="12sp"
        android:textStyle="bold"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>
